tests/errors/loop-break-owner-maybe-unavailable-overwrite.ari
fn maybe_consume(condition: bool) -> i64 {
  var token: own i64 = 5;
  while condition {
    drop token;
    break;
  }
  token = 6;
  drop token;
  return 0;
}

fn main() -> i64 {
  return maybe_consume(false);
}
